test/tests/errors/error-valof-no-return.sm
// true
// false
/**/
/**/

program {
    var x = valof {
        var a = 1;
        var b = 1;
        a = a + b;
    };
}